fix: burger menu visible <768px

--- a/shelter/pages/main/scss/layout/_header.scss
+++ b/shelter/pages/main/scss/layout/_header.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding-top: 27px;
     padding-bottom: 15px;
-    @media (max-width: ($table-width - 10px)) {
+    @media (max-width: ($table-width - 1px)) {
       margin-right: 10px;
       margin-left: 10px;
     }
@@ -21,7 +21,7 @@
   }
   &__burger {
     display: none;
-    @media (max-width: ($table-width - 10px)) {
+    @media (max-width: ($table-width - 1px)) {
       display: flex;
       width: 30px;
       height: 22px;
