--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -465,7 +465,7 @@ p {
   padding-top: 27px;
   padding-bottom: 15px;
 }
-@media (max-width: 758px) {
+@media (max-width: 767px) {
   .header__wrapper {
     margin-right: 10px;
     margin-left: 10px;
@@ -481,7 +481,7 @@ p {
 .header__burger {
   display: none;
 }
-@media (max-width: 758px) {
+@media (max-width: 767px) {
   .header__burger {
     display: flex;
     width: 30px;
@@ -708,7 +708,7 @@ p {
     color: #FAFAFA;
   }
 }
-@media (max-width: 758px) {
+@media (max-width: 767px) {
   .navigation {
     display: none;
   }
